Fixed news top padding on mobile

--- a/themes/newgimp/static/css/gimp.css
+++ b/themes/newgimp/static/css/gimp.css
@@ -542,9 +542,10 @@ footer .nav-bottom a {
         padding-top: 60px;
     }
 
-    #pushPage #articles, #pushPage #content.body {
-        /* padding-top: 65px; */
+    #pushPage #content.body {
+        padding-top: 65px;
     }
+
 
     #pushPage #banner {
         padding-top: 55px;
